<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="header_text">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="button_one_label">SPOTIFY STREAMER</string>
    <string name="button_two_label">SCORES APP</string>
    <string name="button_three_label">LIBRARY APP</string>
    <string name="button_four_label">BUILD IT BIGGER</string>
    <string name="button_five_label">BACON APP</string>
    <string name="button_six_label">CAPSTONE: MY OWN APP</string>

    <string name="button_one_text">This button will launch the Spotify Streamer app.</string>
    <string name="button_two_text">This button will launch the Scores app.</string>
    <string name="button_three_text">This button will launch the Library app.</string>
    <string name="button_four_text">This button will launch the Build It Bigger app.</string>
    <string name="button_five_text">This button will launch the Bacon app.</string>
    <string name="button_six_text">This button will launch my capstone app.</string>

</resources>
