<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="75dp"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/header_text"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#F08C35"
        android:text="@string/button_one_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#F08C35"
        android:text="@string/button_two_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#F08C35"
        android:text="@string/button_three_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#F08C35"
        android:text="@string/button_four_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#F08C35"
        android:text="@string/button_five_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#D73357"
        android:text="@string/button_six_label"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</LinearLayout>
